--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.55",
+    "@babel/runtime": "7.0.0-beta.55",
     "axios": "^0.18.0",
     "formik": "^1.0.2",
+    "lodash": "^4.17.10",
+    "moment": "^2.22.2",
+    "ramda": "^0.25.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-hot-loader": "^4.3.4",
     "react-placeholder": "^3.0.1",
     "react-router-dom": "^4.3.1",
+    "react-semantic-ui-range": "^0.6.2",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.2",
     "yup": "^0.26.0"
@@ -20,12 +24,15 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
+    "babel-jest": "^23.4.2",
     "babel-loader": "^7.1.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-function-bind": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "compression-webpack-plugin": "^1.1.11",
+    "connect-history-api-fallback": "^1.5.0",
     "css-loader": "^1.0.0",
     "error-overlay-webpack-plugin": "^0.1.5",
     "eslint": "^5.3.0",
@@ -40,6 +47,8 @@
     "flow-bin": "^0.78.0",
     "flow-typed": "^2.5.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.4.2",
+    "koa-connect": "^2.0.1",
     "mini-css-extract-plugin": "^0.4.1",
     "prettier": "^1.14.0",
     "style-loader": "^0.22.0",
