--- a/.babelrc
+++ b/.babelrc
@@ -12,11 +12,11 @@
       }
     ]
   ],
-  "plugins": ["transform-function-bind","react-hot-loader/babel","transform-class-properties"
-  ],
+  "plugins": ["transform-function-bind","react-hot-loader/babel","transform-class-properties"],
   "env": {
     "test": {
-      "presets": [["env"], "react"]
+      "presets": [["env"], "react"],
+      "plugins": ["transform-class-properties"]
     }
   }
 }
