--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,8 @@
   },
   "env": {
     "es6": true,
-    "browser": true
+    "browser": true,
+    "jest": true
   },
   "rules": {
     "jsx-a11y/anchor-is-valid": [
