--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "compression-webpack-plugin": "^1.1.11",
     "connect-history-api-fallback": "^1.5.0",
     "css-loader": "^1.0.0",
+    "enzyme": "^3.4.1",
+    "enzyme-adapter-react-16": "^1.2.0",
     "error-overlay-webpack-plugin": "^0.1.5",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.0.0",
@@ -51,6 +53,7 @@
     "koa-connect": "^2.0.1",
     "mini-css-extract-plugin": "^0.4.1",
     "prettier": "^1.14.0",
+    "react-test-renderer": "^16.4.2",
     "style-loader": "^0.22.0",
     "webpack": "^4.16.5",
     "webpack-bundle-analyzer": "^2.13.1",
@@ -62,8 +65,12 @@
     "bundle": "webpack",
     "bundle:prod": "npm run bundle -- --env.mode production",
     "bundle:dev": "npm run bundle -- --env.mode development",
+    "lint":"eslint .",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "test:update": "jest -u",
     "serve": "webpack-serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC"
