--- a/.babelrc
+++ b/.babelrc
@@ -12,11 +12,11 @@
       }
     ]
   ],
-  "plugins": ["transform-function-bind","react-hot-loader/babel","transform-class-properties"],
+  "plugins": ["transform-function-bind","react-hot-loader/babel","transform-class-properties","transform-object-rest-spread"],
   "env": {
     "test": {
       "presets": [["env"], "react"],
-      "plugins": ["transform-class-properties"]
+      "plugins": ["transform-class-properties","transform-object-rest-spread"]
     }
   }
 }
