--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-function-bind": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
@@ -65,7 +66,7 @@
     "bundle": "webpack",
     "bundle:prod": "npm run bundle -- --env.mode production",
     "bundle:dev": "npm run bundle -- --env.mode development",
-    "lint":"eslint .",
+    "lint": "eslint .",
     "test:coverage": "jest --coverage",
     "test:update": "jest -u",
     "serve": "webpack-serve",
